<resources>
    <string name="app_name">Código de Policía</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation</string>
    <string name="action_settings">Acerca de</string>
   <string name="title_activity_codigo_policia_layout">codigoPoliciaLayout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_introduccion">Introducción</string>
    <string name="menu_1">Código de Policía</string>
    <string name="menu_2">Alcohol y drogas</string>
    <string name="menu_3">Animales y mascotas</string>
    <string name="menu_4">Porte de armas</string>
    <string name="menu_5">Peatones y bicicletas</string>
    <string name="menu_6">Transporte público</string>
    <string name="menu_7">Espacio público</string>
    <string name="menu_8">Actividad comercial</string>
    <string name="menu_9">Protesta Social</string>
    <string name="menu_10">Convivencia entre vecinos</string>
    <string name="title_home_1">¡NO SE GANE UNA MULTA!</string>
    <string name="title_home_2">ABC del nuevo Código de Policía</string>
    <string name="text_introduction_1">Código Nacional de Policía y Convivencia</string>
    <string name="text_introduction_2">Entró en vigencia el nuevo Código Nacional de Policía y Convivencia (Ley 1801 de 2016), una herramienta diseñada para
        prevenir la violencia y losdelitos que se derivan de los conflictos de convivencia.</string>
    <string name="text_codigo_1"><b>EL CONGRESO DE COLOMBIA \n
        \n
        DECRETA:</b></string>
    <string name="codigo_libro_1"><b>LIBRO PRIMERO \n
        \n
        DISPOSICIONES GENERALES</b></string>
    <string name="libro_1_titulo_1"><b>TÍTULO I \n
        OBJETO DEL CÓDIGO, ÁMBITO DE APLICACIÓN Y AUTONOMÍA. \n
        BASES DE LA CONVIVENCIA</b></string>
    <string name="lib_1_tit_1_cap_1"><b>CAPÍTULO I
        \n
        OBJETO DEL CÓDIGO, ÁMBITO DE APLICACIÓN Y AUTONOMÍA </b></string>
    <string name="codigo_art_1"><b>Artículo 1.</b> Objeto. Las disposiciones previstas en este Código son de carácter preventivo y buscan establecer las condiciones para la convivencia en el
        territorio nacional al propiciar el cumplimiento de los deberes y obligaciones de las personas naturales y jurídicas, así como determinar el ejercicio del poder, la función y la
        actividad de policía, de conformidad con la Constitución Política y el ordenamiento jurídico vigente. </string>
    <string name="codigo_art_2"><b>Artículo 2°. Objetivos específicos.</b> Con el fin de mantener las condiciones necesarias para la convivencia en el territorio nacional, los objetivos específicos
        de este Código son los siguientes: \n
        1. Propiciar en la comunidad comportamientos que favorezcan la convivencia en el espacio público, áreas comunes, lugares abiertos al público o que siendo privados trasciendan a lo público. \n
        2. Promover el respeto, el ejercicio responsable de la libertad, la dignidad, los deberes y los derechos correlativos de la personalidad humana. \n
        3. Promover el uso de mecanismos alternativos, o comunitarios, para la conciliación y solución pacífica de desacuerdos entre particulares. \n
        4. Definir comportamientos, medidas, medios y procedimientos de policía. \n
        5. Establecer la competencia de las autoridades de pOlicía en el orden nacional, departamental, distrital y municipal, con observancia del principio de autonomía territorial. \n
        6. Establecer un procedimiento respetuoso del debido proceso, idóneo, inmediato, expedito y eficaz para la atención oportuna de los comportamientos relacionados con la convivencia en el territorio nacional.</string>
    <string name="codigo_art_3"><b>Artículo 3°. Ámbito de aplicación del Derecho de Policía.</b> El derecho de policía se aplicará a todas las personas naturales o jurídicas, de conformidad con este Código. \n
        \n
        Las autoridades de policía sujetarán sus actuaciones al procedimiento único de policía, sin perjuicio de las competencias que les asistan en procedimientos regulados por leyes especiales. </string>
    <string name="codigo_art_4"><b>Artículo 4°. Autonomía del acto y del procedimiento de policía.</b> Las disposiciones de la Parte Primera del Código de Procedimiento Administrativo y de lo Contencioso
        Administrativo no se aplicarán al acto de pOlicía ni a los procedimientos de policía, que por su misma naturaleza preventiva requieren decisiones de aplicación inmediata, eficaz, oportuna y
        diligente, para conservar el fin superior de la convivencia, de conformidad con las normas vigentes y el artículo 20 de la Ley 1437 de 2011. Por su parte las disposiciones de la parte
        segunda de la Ley 1437 de 2011 se aplicarán a la decisión final de las autoridades de policía en el proceso único de policía, con excepción de aquellas de que trata el numeral 3 del Artículo 105 de la Ley en mención.  </string>
    <string name="lib_1_tit_1_cap_2"><b>CAPÍTULO II \n
        BASES DE LA CONVIVENCIA Y SEGURIDAD CIUDADANA</b></string>
    <string name="codigo_art_5"><b>Artículo 5°. Definición.</b> Para los efectos de este Código, se entiende por convivencia, la
        interacción pacífica, respetuosa y armónica entre las personas, con los bienes, y con el ambiente, en el marco del ordenamiento
        jurídico.</string>
    <string name="codigo_art_6"><b>Artículo 6°.</b> Categorías jurídicas. Las categorías de convivencia son: seguridad, tranquilidad,
        ambiente y salud pública, y su alcance es el siguiente:\n
        1. Seguridad: Garantizar la protección de los derechos y libertades constitucionales y legales de las personas en el territorio nacional.\n
        2. Tranquilidad: Lograr que las personas ejerzan sus derechos y libertades, sin abusar de los mismos, y con plena observancia de los derechos ajenos.\n
        3. Ambiente: Favorecer la protección de los recursos naturales, el patrimonio ecológico, el goce y la relación sostenible con el ambiente. \n
        4. Salud Pública: Es la responsabilidad estatal y ciudadana de protección de la salud como un derecho esencial, individual,
        colectivo y comunitario logrado en función de las condiciones de bienestar y calidad de vida. </string>
    <string name="codigo_art_7"><b>Artículo 7°.</b> Finalidades de la convivencia. Son fines esenciales de las normas de convivencia
        social previstas en este Código:\n
        1. Que el ejercicio de los derechos y libertades sean garantizados y respetados en el marco de la constitución y la ley.\n
        2. El cumplimiento de los deberes contenidos en la Constitución, la ley y las normas que regulan la convivencia.\n
        3. El respeto por las diferencias y la aceptación de ellas.\n
        4. La resolución pacífica de los desacuerdos que afecten la convivencia.\n
        5. La convergencia de los intereses personales y generales para promover un desarrollo armónico.\n
        6. prevalencia de los valores sociales de solidaridad, tolerancia, responsabilidad, honradez, respeto, bondad, libertad,
        justicia, igualdad, fraternidad, lealtad, prudencia y paz. </string>
    <string name="codigo_art_8"><b>Artículo 8°. Principios.</b> Son principios fundamentales del Código:\n
    1. La protección de la vida y el respeto a la dignidad humana.\n
        2. Protección y respeto a los derechos humanos.\n
        3. La prevalencia de los derechos de niños, niñas y adolescentes y su protección integral.\n
        4. La igualdad ante la ley.\n
        5. La libertad y la autorregulación.\n
        6. El reconocimiento y respeto de las diferencias culturales, la autonomía e identidad regional, la diversidad y la no discriminación.\n
        7. El debido proceso.\n
        8. La protección de la diversidad e integridad del ambiente y el patrimonio ecológico.\n
        9. La solidaridad.\n
        10. La solución pacífica de las controversias y desacuerdos de los conflictos.\n
        11. El respeto al ordenamiento jurídico y a las autoridades legalmente constituidas.\n
        12. Proporcionalidad y razonabilidad. La adopción de medios de policía y medidas correctivas debe ser proporcional y razonable
        atendiendo las circunstancias de cada caso y la finalidad de la norma. Por lo tanto, se debe procurar que la afectación de
        derechos y libertades no sea superior al beneficio perseguido y evitar todo exceso innecesario.\n
        13. Necesidad. Las autoridades de policía solo podrán adoptar los medios y medidas rigurosamente necesarias e idóneas para la
        preservación y restablecimiento del orden público cuando la aplicación de otros mecanismos de protección, restauración,
        educación o de prevención resulte ineficaz para alcanzar el fin propuesto.\n
        <b>Parágrafo.</b> Los principios enunciados en la Ley 1098 de 2006 deberán observarse como criterio de interpretación y aplicación
        de esta Ley cuando se refiera a niños, niñas y adolescentes.</string>
    <string name="text_responsible">Autoridades responsables</string>
    <string name="text_behaviors">Comportamientos contrarios a la convivencia y sanciones</string>
    <string name="text1">Alcaldías y gobernaciones</string>
    <string name="text2">Policía</string>
    <string name="text3"><i>Definir lugares de traslados:</i> \n
        \n
        Los alcaldes deben definir el lugar al que pueden ser enviadas las personas que sean trasladadas, por protección, por la Policía.</string>
    <string name="text4"><i>Prohibir la venta de alcohol: </i> \n
        \n
        Ante situaciones de emergencia y calamidad, los alcaldes y gobernadores podrán restringir o prohibir el expendio y consumo de bebidas alcohólicas.</string>
    <string name="text5"><i>Traslado por protección:</i> \n
        \n
        Cuando la vida o integridad de una persona o terceros esté en riesgo o peligro, la Policía podrá trasladarla para su protección. Específicamente, en los siguientes casos:
        Cuando deambule con el estado de conciencia alterado o bajo los efectos de bebidas alcohólicas \n
        \n
        - Cuando esté involucrada en una riña o presente comportamientos agresivos o temerarios \n
        - Cuando realice actividades peligrosas o de riesgo que pongan en peligro su vida o integridad o la de terceros \n
        - Cuando esté en peligro de ser agredida \n
        \n
        Antes del traslado, la Policía podrá entregar a la persona a un allegado o pariente que asuma la protección. La duración del traslado no podrá ser mayor a 12 horas y la Policía tendrá que hacer un informe escrito de lo sucedido, para lo cual deberá definir el formato.</string>
    <string name="text6">Restricción: Una persona no podrá ser trasladada por la Policía por el simple hecho de estar consumiendo bebidas alcohólicas o sustancias psicoactivas.</string>
    <string name="text7"><i>En barrios y viviendas</i></string>
    <string name="text8">Consumo: Consumir bebidas alcohólicas, sustancias psicoactivas o prohibidas en lugares no autorizados para su consumo. \n <b>Multa de $394.000</b></string>
    <string name="text9">Venta a menores: Facilitar, prestar o vender bebidas alcohólicas, cigarrillo, tabaco y sus derivados, o sustancias psicoactivas a niños, niñas o
        adolescentes.\n <b>Multa de $787.000</b></string>
</resources>