<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_code1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_1" />
        <item
            android:id="@+id/nav_code2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/nav_code3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_3" />
        <item
            android:id="@+id/nav_code4"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_4" />
        <item
            android:id="@+id/nav_code5"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_5" />
        <item
            android:id="@+id/nav_code6"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_6" />
        <item
            android:id="@+id/nav_code7"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_7" />
        <item
            android:id="@+id/nav_code8"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_8" />
        <item
            android:id="@+id/nav_code9"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_9" />
        <item
            android:id="@+id/nav_code10"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_10" />
    </group>
</menu>
