<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Code1Fragment">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_separator"
            android:padding="@dimen/fab_margin"
            android:gravity="center"
            android:textColor="@color/White"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            android:text="@string/menu_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="479dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_margin10"
            android:layout_marginRight="@dimen/dialog_margin10"
            android:padding="@dimen/dialog_margin10"
            android:background="@drawable/text_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/text_codigo_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_separator"
                android:layout_gravity="center_horizontal"
                android:text="@string/codigo_art_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_separator"
                android:layout_gravity="center_horizontal"
                android:text="@string/codigo_art_2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_separator"
                android:layout_gravity="center_horizontal"
                android:text="@string/codigo_art_3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_separator"
                android:layout_gravity="center_horizontal"
                android:text="@string/codigo_art_4"/>
        </LinearLayout>
</FrameLayout>